--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,43 +1,39 @@
 {% extends 'portfolio/base.html' %}
 {% load static %}
-
 {% block content %}
-    {% include 'includes/navbar.html' %}
-    <div class="row justify-content-center mb-3">
-
-        <div class="p-3 mb-2 bg-info text-dark">
-            <h1 id="blogtitle" class="text-center">Сергей Тамкович</h1>
-        </div>
-
-    </div>
-
-
     <br>
+ <br>
+     <br>
     <img src="{% static 'portfolio/img/photo_2022-05-13_21-08-57.jpg' %}"
          class="rounded-lg mx-auto d-block border border-light" width="400" height="502" alt="">
+    <br>
     <div class="row justify-content-center mb-3">
-        <div class="col-md-9 text-center">
-            <h1 id="hometext">Привет! Добро пожаловать на мой проект, сайт-портфолио начинающего разработчика Сергея
-                Тамковича.</h1>
-        </div>
+
+            <h1 id="text">Привет! Меня зовут Сергей Тамкович! <br>Добро пожаловать на мой проект — сайт - портфолио начинающего Python разработчика.</h1>
+
     </div>
 
-    <h2 class="mt-5">Портфолио</h2>
-    <hr>
+
+    <h1 class="display-4">Portfolio</h1>
+    <hr class="line">
     <div class="row">
-        {% for project in projects %}
-            <div class="col-lg-4 col-md-6">
-                {% if project.url %}
-                    <a href="{{ project.url }}" target="_blank">
-                        <img src="{{ project.image.url }}" class="rounded-lg img-fluid mb-2">
-                    </a>
-                {% else %}
+    {% for project in projects %}
+        <div class="col-lg-4 col-md-6">
+            {% if project.url %}
+                <a href="{{ project.url }}" target="_blank">
+                    <img src="{{ project.image.url }}" width="300" height="300"  class="displayed">
+                </a>
+                <br>
+                <a class="url" href="{{ project.url }}" target="_blank"><h3>{{ project.title }}</h3></a>
+            {% else %}
 
-                    <img src="{{ project.image.url }}" class="rounded-lg img-fluid mb-2" width="400" height="200">
-                {% endif %}
-                <h3>{{ project.title }}</h3>
-                <p id="project_description">{{ project.description }}</p>
+                <img src="{{ project.image.url }}" class="displayed" width="300" height="300" >
 
-            </div>
-        {% endfor %}
+
+            {% endif %}
+            <p id="project_description">{{ project.description }}</p>
+        </div>
+    {% endfor %}
+    <hr class="line">
+    </div>
 {% endblock %}
