--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -9,7 +9,7 @@
     <br>
     <div class="row justify-content-center mb-3">
 
-            <h1 id="text">Привет! Меня зовут Сергей Тамкович! <br>Добро пожаловать на мой проект — сайт - портфолио начинающего Python разработчика.</h1>
+            <h1 id="text">Привет! Меня зовут Сергей Тамкович! <br>Добро пожаловать на мой проект — сайт портфолио начинающего Python разработчика.</h1>
 
     </div>
 
