--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="{% static 'portfolio/css/custom.css' %}">
 
     <link rel="icon" type="image/png" href="{% static 'portfolio/img/logo.png' %}">
+    <title>STam</title>
 
 
 </head>
