--- a/portfolio/templates/includes/navbar.html
+++ b/portfolio/templates/includes/navbar.html
@@ -11,7 +11,7 @@
                     <a href="{% url 'home' %}">Главная</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">CV</a>
+                    <a href="{% static "portfolio/css/Sergey_Tamkovich .pdf"%}" target="_blank" >CV</a>
                 </li>
                 <li>
                     <a href="https://vk.com/stfrukt" target="_blank">VKontakte </a>
@@ -26,7 +26,7 @@
                     <a href="https://github.com/STamkovich" target="_blank">GitHub</a>
                 </li>
             </ul>
-            <a href="{% url 'blog:all_blogs' %}" class="blog-link"> My Blog</a>
+            <a href="{% url 'blog:all_blogs' %}" class="blog-link"> BLOG</a>
         </div>
     </div>
 </nav>
