--- a/portfolio/static/portfolio/css/custom.css
+++ b/portfolio/static/portfolio/css/custom.css
@@ -108,6 +108,17 @@ body {
     text-decoration: none;
 }
 
+.url2 {
+    color: darkturquoise;
+    text-align: center;
+    font-size: 2.0rem;
+}
+
+.url2:hover {
+    color: white;
+    text-decoration: none;
+}
+
 
 #blogtitle {
     font-family: 'Cairo', sans-serif;
@@ -188,5 +199,10 @@ IMG.displayed {
 
 .image_home {
     text-align: center;
+}
+
+.img-shot {
+    max-width: 420px;
+    height: auto;
 }
 
